--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,31 @@ h1{
     font-family: 'Courier New', monospace, 'Arial';
     font-size: 50px;
     padding: 1.5% 1.5% .25% 1.5%;
-    background-color: #8d9db6;
+    /* background-color: #8d9db6; */
+    background-image: url("/images/mountains.jpg");
     color: black;
     opacity: 0.75;
 }
 
+/* background image for h1 and nav */
+
+/* .mainnav h1{
+  background-image: url("/images/mountains.jpg");
+} */
+
+h2{
+    font-family: 'Courier New', monospace, 'Arial';
+    font-size: 45px;
+    text-align:center;
+    padding: 2% 2% 1% 2%;
+}
 
 /* Navigation Bar */
 /* used w3 schools as a reference for this section
 but mine is different */
  .mainnav {
     width: 100%;
-    background-color: #8d9db6;
+    /* background-color: #8d9db6; */
     overflow: auto;
   }
 
@@ -52,7 +65,33 @@ but mine is different */
   } 
 
 
-  .headshot{
-    width: 100%;
+
+  /* index.html styling */
+  /* .headshot{
+    width: 25%;
     height: auto;
-  } 
+  }  */
+
+  .profileflexcontainer{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  }
+
+  img {
+    max-width: 100%;
+  }
+
+  .profileimage{
+    flex-basis: 85%;
+    min-width:25%;
+  }
+
+  .profiletext{
+    font-size: 30px;
+    padding-left: 20px;
+    font-family: 'Courier New', monospace, 'Arial';
+    
+  }
+
+
