--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,31 @@
 /* Header */
+.backgroundimg{
+  background-image: url(../images/mountains3.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/mountains3.jpg);
+  background-size: cover;
+  background-position: center center;
+
+}  
+
 h1{
     font-family: 'Courier New', monospace, 'Arial';
-    font-size: 50px;
-    padding: 1.5% 1.5% .25% 1.5%;
-    /* background-color: #8d9db6; */
-    background-image: url("/images/mountains.jpg");
-    color: black;
-    opacity: 0.75;
+    font-size: 60px;
+    padding: 9.9% 5% 0.1% 5%;
+    color: white;
+    text-shadow: 2px 2px 4px #000000;
+    text-emphasis-style: bold;
+    text-align:center;
 }
 
 /* background image for h1 and nav */
 
-/* .mainnav h1{
-  background-image: url("/images/mountains.jpg");
-} */
 
 h2{
     font-family: 'Courier New', monospace, 'Arial';
     font-size: 45px;
     text-align:center;
     padding: 2% 2% 1% 2%;
+    margin: 3% 0% 0% 0%;
 }
 
 /* Navigation Bar */
@@ -27,8 +33,8 @@ h2{
 but mine is different */
  .mainnav {
     width: 100%;
-    /* background-color: #8d9db6; */
     overflow: auto;
+    text-align: center;
   }
 
   /* links for nav*/
@@ -36,7 +42,8 @@ but mine is different */
     float: left;
     text-align: center;
     padding: 2%;
-    color: black;
+    color: white;
+    text-shadow: 2px 2px 4px #000000;
     text-decoration: none;
     font-family: 'Courier New', monospace, 'Arial';
     font-size: 25px;
@@ -45,17 +52,19 @@ but mine is different */
   .mainnav a:hover {
     padding-top: 2.5%;
     padding-bottom: 1.5%;
-    color:white;
+    text-shadow: 2px 2px 4px #000000;
+    text-align:center;
   }
 
   .mainnav .current {
     text-decoration: underline overline;
     text-underline-offset: 8%;
     text-decoration-style: dotted;
-    color:white;
+    text-shadow: 2px 2px 4px #000000;
+    text-align:center;
   } 
 
-  /* navbar for mobile - using this from w3 schools*/
+  /* navbar for mobile - using this directly from w3 schools*/
 
   @media screen and (max-width: 500px) {
     .navbar a {
@@ -63,6 +72,61 @@ but mine is different */
       display: block;
     }
   } 
+
+
+/* Sub-navbar: following guide from w3 schools, code is different though */
+
+/* Subnavigation menu */
+.subnavigation {
+  float: left;
+  overflow: hidden;
+  text-align: center;
+}
+
+/* button */
+.subnavigation .subnavbutton {
+  color: white;
+  background-color: inherit;
+  font-family: 'Courier New', monospace, 'Arial';
+  font-size: 25px;
+  margin: 9% 0% 4% 0%;
+  border: none;
+  outline: none;
+}
+
+.subnavbutton button:hover {
+  margin-top: 11%;
+  margin-bottom: 2%;
+}
+
+
+/* Style the subnav content - positioned absolute */
+.subnav-content {
+  display: none;
+  position: absolute;
+  left: 0;
+  background-color: inherit;
+  width: 100%;
+  z-index: 1;
+}
+
+/* Style the subnav links */
+.subnav-content a {
+  float: left;
+  color: black;
+  text-decoration: none;
+  font-family: 'Courier New', monospace, 'Arial';
+  font-size: 20px;
+}
+
+/* When you move the mouse over the subnav container, open the subnav content */
+.subnavigation:hover .subnav-content {
+  display: block;
+}
+
+
+
+
 
 
 
